k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: jar-decompiler
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      targetPort: 6379
